--- a/index.html
+++ b/index.html
@@ -7,11 +7,38 @@
     <title>World clock by Nandar Nwe</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select id="city">
+        <option value="">Select a city..</option>
+        <option value="current">My current location</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Pacific/Auckland">Auckland</option>
+      </select>
+
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
+        <div class="city" id="paris">
+          <div>
+            <h2>Paris</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
+      </div>
+    </div>
     <footer>
-      This project was coded by Nandar Nwe
+      This project was coded with ❤️ by <strong>Nandar Nwe</strong>
       <a href="" target="_blank">open source on GitHub</a>
     </footer>
-    <script src="index.js"></script>
+    <script src="javascript/index.js"></script>
   </body>
 </html>
