--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     </div>
     <footer>
       This project was coded with ❤️ by <strong>Nandar Nwe</strong>
-      <a href="" target="_blank">open source on GitHub</a>
+      <a href="https://github.com/Nandar-MaryAnn/world-clock" target="_blank"
+        >open source on GitHub</a
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
