Update AM PM in HTML

--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
             <h2>Los Angeles</h2>
             <div class="date"></div>
           </div>
-          <div class="time"></div>
+          <div class="time"><small>PM</small></div>
         </div>
         <div class="city" id="paris">
           <div>
             <h2>Paris</h2>
             <div class="date"></div>
           </div>
-          <div class="time"></div>
+          <div class="time">
+            <small>AM</small>
+          </div>
         </div>
       </div>
     </div>
